

#BUILT_SOURCES = \
#	share.h \
#	sherr.h \
#	shpeer.h \
#	shtime.h \
#	shcrc.h \
#	shpref.h \
#	shmem.h \
#	shfs.h \
#	shnet.h

include_HEADERS = \
	share.h \
	sherr.h \
	shpeer.h \
	shtime.h \
	shcrc.h \
	shpref.h \
	shmem.h \
	shfs.h \
	shnet.h \
	shsys.h


share.h: $(top_srcdir)/src/share-lib/share.h
	rm -f share.h
	$(LN_S) $(top_srcdir)/src/share-lib/share.h ./share.h

sherr.h: $(top_srcdir)/src/share-lib/sherr.h
	rm -f sherr.h
	$(LN_S) $(top_srcdir)/src/share-lib/sherr.h ./sherr.h

shpeer.h: $(top_srcdir)/src/share-lib/shpeer.h
	rm -f shpeer.h
	$(LN_S) $(top_srcdir)/src/share-lib/shpeer.h ./shpeer.h

shtime.h: $(top_srcdir)/src/share-lib/shtime.h
	rm -f shtime.h
	$(LN_S) $(top_srcdir)/src/share-lib/shtime.h ./shtime.h

shcrc.h: $(top_srcdir)/src/share-lib/shcrc.h
	rm -f shcrc.h
	$(LN_S) $(top_srcdir)/src/share-lib/shcrc.h ./shcrc.h

shpref.h: $(top_srcdir)/src/share-lib/shpref.h
	rm -f shpref.h
	$(LN_S) $(top_srcdir)/src/share-lib/shpref.h ./shpref.h

shmem.h: $(top_srcdir)/src/share-lib/shmem.h
	rm -f shmem.h
	$(LN_S) $(top_srcdir)/src/share-lib/shmem.h ./shmem.h

shfs.h: $(top_srcdir)/src/share-lib/shfs.h
	rm -f shfs.h
	$(LN_S) $(top_srcdir)/src/share-lib/shfs.h ./shfs.h

shnet.h: $(top_srcdir)/src/share-lib/shnet.h
	rm -f shnet.h
	$(LN_S) $(top_srcdir)/src/share-lib/shnet.h ./shnet.h

shsys.h: $(top_srcdir)/src/share-lib/shsys.h
	rm -f shsys.h
	$(LN_S) $(top_srcdir)/src/share-lib/shsys.h ./shsys.h
